cleanup ignores